# EVC

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  EVC.drawio  License.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  build.yml.in  format.yml  format.yml.in
EVC/: BaseInstructions.h  Instruction.h  Memory.h  Version.h  config.h
Lib/: Version.h.in
Tests/: CMakeLists.txt  tests.c  tests.c.in
docs/: Contributing.md  Contributing.md.in  Guidelines.md  Guidelines.md.in  Readme.md  Readme.md.in  Security.md  Security.md.in
